--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "astro dev --port 5173",
     "start": "astro dev",
     "build": "astro build",
+    "deploy": "astro build && gh-pages -d dist",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/starlight": "^0.36.0",
     "astro": "^5.6.1",
+    "gh-pages": "^6.3.0",
     "sharp": "^0.34.2"
   }
 }
