--- a/package.json
+++ b/package.json
@@ -5,15 +5,32 @@
   "scripts": {
     "dev": "astro dev --port 5173",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "deploy": "astro build && gh-pages -d dist",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint . --ext .js,.ts,.astro",
+    "lint:fix": "eslint . --ext .js,.ts,.astro --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "type-check": "astro check"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.5",
     "@astrojs/starlight": "^0.36.0",
     "astro": "^5.6.1",
     "gh-pages": "^6.3.0",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "astro-eslint-parser": "^1.0.0",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-astro": "^0.14.0"
   }
 }
