--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "astro dev --port 5173",
     "start": "astro dev",
     "build": "astro check && astro build",
-    "deploy": "astro build && gh-pages -d dist",
+    "deploy": "gh-pages -d dist",
     "preview": "astro preview",
     "astro": "astro",
     "lint": "eslint . --ext .js,.ts,.astro",
