--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,3 @@
-# API Configuration
-API_BASE_URL=https://gpt4free.pro/v1/chat/completions
-API_MODEL=gpt-5-chat
-
 # Proxy Configuration (optional)
 PROXY_URL=http://localhost:7890
 
@@ -14,3 +10,5 @@ SITE_DESCRIPTION=A collection of useful GitHub repositories
 
 # Development
 NODE_ENV=development
+
+QWEN_KEY=sk-xxx
