--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ SITE_DESCRIPTION=A collection of useful GitHub repositories
 # Development
 NODE_ENV=development
 
-QWEN_KEY=sk-xxx
+OLLAMA_URL=http://192.168.1.100:11434
